--- a/index.html
+++ b/index.html
@@ -38,18 +38,24 @@
         <div class="Challenges"> 
            
             <div>
-                <button href="/Challenges/Encryption.html">Encryption Challenge</button>
-                <button href="./Challenges/Encryption">Metadata Challenge</button>
-                <button href="./Challenges/Encryption">Crossword Challenge</button>
+                <!-- <div> -->
+                    <button><a href="./Challenges/Encryption.html">
+                        <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
+                        Encryption Challenge</a>
+                    </button>
+                <!-- </div> -->
+                
+                <button><a href="./Challenges/Metadata.html">Metadata Challenge</a></button>
+                <button><a href="./Challenges/Crossword.html">Crossword Challenge</a></button>
                 <button>Non Technical Challenge</button>
             </div>
         </div>
         <div class="Challenges">
             <div>
-                <button href="./Challenges/Encryption">HTML Challenge</button>
-                <button href="./Challenges/Encryption">LeetCode Challenge</button>
-                <button href="./Challenges/Encryption">SQL Injection</button>
-                <button href="./Challenges/Encryption">print Asterisk Challenge</button>
+                <button><a href="./Challenges/htmlChallenge.html">HTML Challenge</a></button>
+                <button><a href="./Challenges/Crossword.html">LeetCode Challenge</a></button>
+                <button><a href="./Challenges/SQL.html">SQL Injection</a></button>
+                <button><a href="#">print Asterisk Challenge</a></button>
             </div>
         </div>
     </main>
