started html challenge

--- a/Challenges/Encryption.html
+++ b/Challenges/Encryption.html
@@ -5,7 +5,7 @@
 
     <title>August Code War</title>
 
-    <link rel="stylesheet" href="CodeWar.css">
+    <link rel="stylesheet" href="../CodeWar.css">
 
 
 
@@ -15,6 +15,7 @@
 <body>
 
     <header>
+        <button class = "back"><a href="../index.html">Back</a></button>
         <h1 style="display: flex;
         justify-content: center;">Encryption Challenge</h1>
     </header>
@@ -22,9 +23,53 @@
     <main>
         <div>
             <h2 style="display: flex;
-            justify-content: center;">Welcome to Code wars</h2>
+            justify-content: center;">Welcome to the encryption challenge</h2>
+            <h3 style="display: flex;
+            justify-content: center;">Instructions: Below you will find an encrypted code. Your task will be to decrypt the hidden message
+            and type it in the input below. Once you are done click on submit and wait for the response. If the message is correct
+        you will be redirected to another url and if it's incorrect you will get a message.</h3>
         </div>
-    
+
+        <div>
+            <p1>
+                01000111 01101111 01101111 01100100 00100000 01110111 01101111 01110010 01101011 
+                00100001 00100000 01011001 01101111 01110101 00100000 01100100 01101001 01100100 
+                01101110 00100111 01110100 00100000 01110100 01101000 01101001 01101110 01101011 
+                00100000 01101001 01110100 00100000 01110111 01101111 01110101 01101100 01100100 
+                00100000 01100010 01100101 00100000 01110100 01101000 01101001 01110011 00100000 
+                01100101 01100001 01110011 01111001 00101100 00100000 01110010 01101001 01100111 
+                01101000 01110100 00111111 00100000 01010100 01101000 01100101 00100000 01101110 
+                01100101 01111000 01110100 00100000 01110011 01110100 01100101 01110000 00100000 
+                01101111 01100110 00100000 01110100 01101000 01101001 01110011 00100000 01100011 
+                01101000 01100001 01101100 01101100 01100101 01101110 01100111 01100101 00100000 
+                01101001 01110011 00100000 01110100 01101111 00100000 01100100 01100101 01100011 
+                01101111 01100100 01100101 00100000 01110100 01101000 01100101 00100000 01100110 
+                01101111 01101100 01101100 01101111 01110111 01101001 01101110 01100111 00100000 
+                01101101 01100101 01110011 01110011 01100001 01100111 01100101 00111010 00100000 
+                00001010 01010100 00110010 01111000 01111010 01100011 00110011 01011001 01100111 
+                01010010 01001000 01011010 00110101 01100011 00110010 01110011 01101000 00001010 
+                00001010 01110000 01110011 00101110 00100000 01010100 01101000 01100101 00100000 
+                01101011 01100101 01111001 00100000 01110100 01101111 00100000 01100101 01101110 
+                01100011 01110010 01111001 01110000 01110100 00100000 01101100 01101001 01100101 
+                01110011 00100000 01110111 01101001 01110100 01101000 00100000 01110100 01101000 
+                01100101 00100000 01100110 01101001 01110010 01110011 01110100 00100000 01101100 
+                01100101 01110100 01110100 01100101 01110010 00100000 01101111 01100110 00100000 
+                01110100 01101000 01101001 01110011 00100000 01110100 01100101 01111000 01110100
+            </p1>
+        </div>
+        <br />
+        <br />
+        <div>
+            <!-- <form action="/action_page.php"> -->
+            <form >
+                <label for="lname">Hidden Message:</label>
+                <input type="text" id="lname" name="lname"><br><br>
+                <input type="submit" value="Submit">
+              </form>
+        </div>
+        <div>
+            <h3>Binary -> Base64 -> Cesar encryption (shift 7)-> Hidden message</h3>
+        </div>
     </main>
 
 </body>
