--- a/Challenges/htmlChallenge.html
+++ b/Challenges/htmlChallenge.html
@@ -5,7 +5,7 @@
 
     <title>August Code War</title>
 
-    <link rel="stylesheet" href="CodeWar.css">
+    <link rel="stylesheet" href="../CodeWar.css">
 
 
 
@@ -15,14 +15,19 @@
 <body>
 
     <header>
+        <button class = "back"><a href="../index.html">Back</a></button>
         <h1 style="display: flex;
-        justify-content: center;">HTML Challenge</h1>
+        justify-content: center;">HTML Challenge 1</h1>
     </header>
 
     <main>
         <div>
             <h2 style="display: flex;
             justify-content: center;">Welcome to Code wars</h2>
+        </div>
+    <br />
+        <div>
+            <button class = "buttonChallenge1"><a href="./htmlChallenge2.html">Click Me!</a></button>
         </div>
     
     </main>
