--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap core CSS -->
     <!-- <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
-    <link rel="stylesheet" href="CodeWar.css">
+    <link rel="stylesheet" href="./CodeWar.css">
 
 
 
@@ -39,23 +39,23 @@
         <div class="Challenges"> 
             <div>
                 <!-- <div> -->
-                    <button style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Encryption.html">
+                    <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Encryption.html">
                         <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
                         <h3>Encryption Challenge</h3></a>
                     </button>
                 <!-- </div> -->
                 
-                <button style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Metadata.html">
+                <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Metadata.html">
                         <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
                         <h3>Metadata Challenge</h3></a>
                 </button>
 
-                <button style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Crossword.html">
+                <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Crossword.html">
                     <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
                     <h3>Crossword Challenge</h3></a>
                 </button>
                 
-                <button style="margin-left: 20px; margin-right: 20px;"><a href="#">
+                <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="#">
                     <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
                     <h3>Non Technical Challenge</h3></a>
                 </button>
@@ -65,22 +65,22 @@
         <br />
         <div class="Challenges">
             <div>
-                <button style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/htmlChallenge.html">
+                <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/htmlChallenge.html">
                     <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
                     <h3>HTML Challenge</h3>
                 </a></button>
 
-                <button style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Crossword.html">
+                <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Crossword.html">
                     <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
                     <h3>Leet Code Challenge</h3>
                 </a></button>
 
-                <button style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/SQL.html">
+                <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/SQL.html">
                     <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
                     <h3>SQL Injection</h3>
                 </a></button>
 
-                <button style="margin-left: 20px; margin-right: 20px;"><a href="#">
+                <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="#">
                     <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
                     <h3>Print Asterisk Challenge</h3>
                 </a></button>
