Finished metadata challenge

--- a/Challenges/Metadata.html
+++ b/Challenges/Metadata.html
@@ -5,7 +5,7 @@
 
     <title>August Code War</title>
 
-    <link rel="stylesheet" href="CodeWar.css">
+    <link rel="stylesheet" href="../CodeWar.css">
 
 
 
@@ -22,7 +22,14 @@
     <main>
         <div>
             <h2 style="display: flex;
-            justify-content: center;">Welcome to Code wars</h2>
+            justify-content: center;">Welcome to the metadata challenge</h2>
+            <h3 style="display: flex;
+            justify-content: center;">This photo has a hidden message inside it. Find it and it will give you directions to go to the next step of the challenge</h3>
+        </div>
+
+        <div style="display: flex;
+        justify-content: center;">
+            <image src="../Pictures/Atos-banner.jpg" style="height:350px; width:1000px" />
         </div>
     
     </main>
