--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 <!-- </div> -->
                 
                 <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Metadata.html">
-                        <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
+                        <img src="./Pictures/metadata.png" style="width:75px; height:75px;">
                         <h3>Metadata Challenge</h3></a>
                 </button>
 
                 <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Crossword.html">
-                    <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
+                    <img src="./Pictures/Crossword.jpg" style="width:75px; height:75px;">
                     <h3>Crossword Challenge</h3></a>
                 </button>
                 
@@ -66,7 +66,7 @@
         <div class="Challenges">
             <div>
                 <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/htmlChallenge.html">
-                    <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
+                    <img src="./Pictures/html.png" style="width:100px; height:75px;">
                     <h3>HTML Challenge</h3>
                 </a></button>
 
