--- a/Challenges/Cipher2.html
+++ b/Challenges/Cipher2.html
@@ -46,34 +46,34 @@
   </div>
 </header>
 
-<main>
+<main style="background-color: #5AB9EA ">
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Fallen Phrase Challenge</h1>
-        <p class="lead text-muted">
+        <h1 class="fw-light"  style="color:black; font-size: 72px;">Fallen Phrase Challenge</h1>
+        <p class="" style="color:black; font-size: 24px;">
 Cipher Challenge instructions        
 </p>
       </div>
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
-    <div class="container">
-        
-        <div style="display: flex;
-        justify-content: center;">
+
+  <section style="height:550px">
+    <Card style="margin:20px; background-color: #E3E2DF; height:800px; width:1050px">
+      <div style="display: flex;
+          justify-content: center;">
             <image src="../Pictures/FallenPhrase.JPG" style="height:350px; width:1000px" />
-        </div>    
-        <div style="display: flex;
+          </div>    
+          <br/>
+          <div style="display: flex;
         justify-content: center;">
             <input>
             <button>Submit </button>
         </div> 
-
-    </div>
-  </div>
+    </Card>
+  </section>
 
 </main>
 
