--- a/Challenges/Cipher3.html
+++ b/Challenges/Cipher3.html
@@ -46,41 +46,38 @@
   </div>
 </header>
 
-<main>
+<main style="background-color: #5AB9EA ">
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Beaver Code Challenge</h1>
-        <p class="lead text-muted">
+        <h1 class="fw-light" style="color:black; font-size: 72px;">Beaver Code Challenge</h1>
+        <p class="" style="color:black; font-size: 24px;">
 Cipher Challenge instructions        
 </p>
       </div>
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
-    <div class="container">
-        
-        <div style="display: flex;
+  <section style="height:700px">
+    <Card style="margin:20px; background-color: #E3E2DF; height:800px; width:1050px">
+      <div style="display: flex;
         justify-content: center;">
             <image src="../Pictures/BeaverExample.JPG" style="height:500px; width:1000px" />
         </div>    
         <br />
-        <div style="display: flex;
+      <div style="display: flex;
         justify-content: center;">
-            <image src="../Pictures/Cipher-BeaverCode.png" style="height:100; width:200px" />
+            <image src="../Pictures/BeaverCode2.png" style="height:50px; width:150px" />
         </div>    
         <br />
         <div style="display: flex;
         justify-content: center;">
             <input>
             <button>Submit </button>
-        </div> 
-
-    </div>
-  </div>
-
+        </div>  
+    </Card>
+  </section>
 </main>
 
 <footer class="text-muted py-5">
