--- a/Challenges/Crossword.html
+++ b/Challenges/Crossword.html
@@ -46,28 +46,29 @@
   </div>
 </header>
 
-<main>
+<main style="background-color: #5AB9EA ">
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Crossword Challenge</h1>
-        <p class="lead text-muted">
-Crossword Challenge instructions        
+        <h1 class="fw-light" style="color:black; font-size: 72px;">Crossword Challenge</h1>
+        <p class="" style="color:black; font-size: 24px;">
+Follow the link below and it will redirect you to a crossword challenge. You will need to complete the crossword and take a screenshot and paste it in your team's breakroom chat
 </p>
       </div>
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
+  <div class="album py-5" style="background-color: #5AB9EA;">
     <div class="container">
+      <h1>https://share.eclipsecrossword.com/play/713c68d3/it-team-roles</h1>
 
     </div>
   </div>
 
 </main>
 
-<footer class="text-muted py-5">
+<!-- <footer class="text-muted py-5">
   <div class="container">
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
@@ -75,7 +76,7 @@ Crossword Challenge instructions
     <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
     <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
   </div>
-</footer>
+</footer> -->
 
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
