--- a/Challenges/Encryption.html
+++ b/Challenges/Encryption.html
@@ -47,21 +47,21 @@
 </header>
 
 <!-- <main style="background-color: #006ead"> -->
-<main style="background-color: #E3E2DF;">
+<main style="background-color: #5AB9EA;">
 
-  <section class="py-5 text-center container" style="height:250px" >
+  <section class="py-5 text-center container"  >
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light" >Encryption Challenge</h1>
-        <p style="color: #ffffff;">
-Instructions: There is a hidden message inside the encrypted text. Your task is to decrypt the message and find the hidden flag
+        <h1 class="fw-light" style="color:black; font-size: 72px;" >Encryption Challenge</h1>
+        <p style="color:black; font-size: 24px;">
+Instructions: There is a hidden message inside the encrypted text. Your task is to decrypt the message and find the hidden flag. Once you find the flag, please type it in your breakout's room chat. 
        </p>
 
       </div>
     </div>
   </section>
 
-  <div class="album py-5 " style="background-color: #DBF3FA;"  >
+  <div class="album py-5 " style="background-color: #5AB9EA;"  >
     <div class="container" >
 
     <p1>
