--- a/Challenges/Metadata2.html
+++ b/Challenges/Metadata2.html
@@ -46,37 +46,29 @@
   </div>
 </header>
 
-<main>
+<main style="background-color: #5AB9EA ">
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Metadata Challenge</h1>
-        <p class="lead text-muted">
+        <h1 class="fw-light" style="color:black; font-size: 72px;">Metadata Challenge</h1>
+        <p class="" style="color:black; font-size: 24px;">
             For the next step of this challenge, there is hidden message inside the photo. You will need to dowload the photo and inspect it to find the hidden message.       </p>
         </p>
-        <p class="lead text-muted">
+        <p class="" style="color:black; font-size: 24px;">
             Hint: play with the colors of the picture to find the message        </p>
       </div>
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-        <div style="display: flex;
-        justify-content: center;">
-          <image src="../Pictures/GoldMedal.jpg" style="height:600px; width:600px" />        
-        </div>  
-        <br />
-        <div style="display: flex;
-        justify-content: center;">
-            <input>
-            <button>Submit </button>
-        </div> 
-        
-    </div>
-  </div>
+  <section >
+    <Card style="margin:20px; background-color: #E3E2DF; height:800px; width:1050px">
+      <div style="display: flex;
+          justify-content: center;">
+ <image src="../Pictures/GoldMedalFinal.jpg" style="height:600px; width:600px" />                  </div>    
+    </Card>
+  </section>
+ 
 
 </main>
 
