--- a/Challenges/Metadata.html
+++ b/Challenges/Metadata.html
@@ -46,39 +46,40 @@
   </div>
 </header>
 
-<main style="background-color: #E3E2DF;">
+<main style="background-color: #5AB9EA ">
 
   <section class="py-5 text-center container" style="height:250px">
     <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Metadata Challenge</h1>
-        <p class="lead text-muted">
-Instructions: This photo has a hidden message inside it. Find it and it will give you directions to go to the next step of the challenge
+      <div class="col-lg-12 col-md-8 mx-auto">
+        <h1 class="fw-light" style="color:black; font-size: 72px;">Metadata Challenge</h1>
+        <p class="" style="color:black; font-size: 24px;">
+Instructions: This photo has a hidden message inside it. Find it and it will give you directions to go to the next step of the challenge.
        </p>
 
       </div>
     </div>
   </section>
 
-  <div class="album py-5 " style="background-color: #ADD8E6;"  >
-    <div class="container" style="height:500px">
+  <section style="height:550px">
+    <Card style="margin:20px; background-color: #E3E2DF; height:800px; width:1050px">
+      <div style="display: flex;
+          justify-content: center;">
+              <image src="../Pictures/Atos-banner.jpg" style="height:350px; width:1000px" />
+          </div>    
+    </Card>
+  </section>
+  
 
-        <div style="display: flex;
-        justify-content: center;">
-            <image src="../Pictures/Atos-banner.jpg" style="height:350px; width:1000px" />
-        </div>        
-    </div>
-  </div>
 
 </main>
 
-<footer class="text-muted py-5" style="background-color: #E3E2DF;">
+<footer class="text-muted py-5" style="background-color: #C1C8E4;">
   <div class="container">
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1" style="color:white">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
+    <p class="mb-0" style="color:white">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
   </div>
 </footer>
 
