--- a/index.html
+++ b/index.html
@@ -46,14 +46,17 @@
   </div>
 </header>
 
-<main  style="background-color: #ffff">
+<main  style="background-color: #5AB9EA">
 
   <section class="py-5 text-center container">
-    <div class="row py-lg-5" >
+    <div class="row py-lg-6" >
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Code Wars August</h1>
-        <p class="lead text-muted">
-Welcome to Code Wars! This is 
+        <h1 class="fw-light" style="color:black; font-size: 72px;">Code Wars August</h1>
+        <p class="" style="color:black; font-size: 24px;">
+Welcome to Code Wars! In this website you will find the 8 challenges to complete. To view each challenge you must click on the card of the challenge and you will be redirected to the challenge page. The instruction of each page can be found inside the challenge page.
+       </p>
+        <p class="" style="color:black; font-size: 24px;">
+Each challenge is worth 10 pts and you can earn 5 bonus points if your team is the first to solve a challenge
        </p>
 
       </div>
@@ -61,7 +64,7 @@ Welcome to Code Wars! This is
   </section>
 
   <!-- <div class="album py-5 t" style="background-color: #ADD8E6"> -->
-  <div class="album py-5 t bg-light" >
+  <div class="album py-5 t " >
     <div class="container">
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
