Continued work on design

--- a/Challenges/htmlChallenge.html
+++ b/Challenges/htmlChallenge.html
@@ -46,13 +46,13 @@
   </div>
 </header>
 
-<main>
+<main  style="background-color: #5AB9EA ">
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">HTML Challenge</h1>
-        <p class="lead text-muted">
+        <h1 class="fw-light" style="color:black; font-size: 72px;">HTML Challenge</h1>
+        <p class="" style="color:black; font-size: 24px;">
 Instructions: There are many buttons inside this webpage. Only one will take you into the next step of the challenge. Good luck finding it.
        </p>
 
@@ -60,7 +60,7 @@ Instructions: There are many buttons inside this webpage. Only one will take you
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
+  <div class="album py-5"  style="background-color: #5AB9EA ">
     <div class="container">
 
             <button class = "buttonCard" style="margin: 20px;"><h3><a href="htmlChallenge2.html">Click Me!</a></h3></button>
