--- a/Challenges/htmlChallenge2.html
+++ b/Challenges/htmlChallenge2.html
@@ -46,13 +46,13 @@
   </div>
 </header>
 
-<main>
+<main style="background-color: #5AB9EA ">
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">HTML Challenge</h1>
-        <p class="lead text-muted">
+        <h1 class="fw-light" style="color:black; font-size: 72px;">HTML Challenge</h1>
+        <p class="" style="color:black; font-size: 24px;">
 Instructions: There is a hidden button inside this webpage. The task is to find it and click it to advance to the next step of the challenge
        </p>
 
@@ -60,7 +60,7 @@ Instructions: There is a hidden button inside this webpage. The task is to find 
     </div>
   </section>
 
-  <div class="album py-5 bg-light" style="height: 1000px;">
+  <div class="album py-5" style="height: 1000px; background-color: #5AB9EA">
     <!-- <div class="container"> -->
 
             <button  style="display: none"><h3><a href="htmlChallenge3.html">Click Me!</a></h3></button>
