--- a/Challenges/htmlChallenge4.html
+++ b/Challenges/htmlChallenge4.html
@@ -46,12 +46,12 @@
   </div>
 </header>
 
-<main>
+<main style="background-color: #5AB9EA ">
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Congratulations! You completed the Metadata challenge</h1>
+        <h1 class="fw-light" style="color:black; font-size: 72px;">Congratulations! You completed the Metadata challenge</h1>
         <!-- <p class="lead text-muted">
 Cipher Challenge instructions        
 </p> -->
@@ -59,7 +59,7 @@ Cipher Challenge instructions
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
+  <div class="album py-5" style="background-color: #5AB9EA ">
     <div class="container">
         
         <h1>The hidden phrase is: aaaaaaaaaaaa</h1>
