Cipher submit button working

--- a/Challenges/Crossword.html
+++ b/Challenges/Crossword.html
@@ -29,6 +29,16 @@
           font-size: 3.5rem;
         }
       }
+      button {
+        /* position: absolute; */
+        /* top: 50%; */
+        /* left: 50%; */
+        width: 400px;
+        background: white;
+        color: black;
+        border: 1px solid black;
+        font-size: 1.5em;
+        }
     </style>
 
     
@@ -60,10 +70,10 @@ Follow the link below and it will redirect you to a crossword challenge. You wil
   </section>
 
   <div class="album py-5" style="background-color: #5AB9EA;">
-    <div class="container">
-      <h1>https://share.eclipsecrossword.com/play/713c68d3/it-team-roles</h1>
-
-    </div>
+    <div style="display: flex;
+          justify-content: center;">
+      <Button><a href="https://share.eclipsecrossword.com/play/713c68d3/it-team-roles">Go to Crossword page</a></Button>
+    </div>  
   </div>
 
 </main>
