--- a/Challenges/Cipher1.html
+++ b/Challenges/Cipher1.html
@@ -75,10 +75,11 @@ Cipher Challenge instructions
         <div style="display: flex;
         justify-content: center;">
 
-        <form name="frm" method="post" onsubmit="return validate()" >
-          <input type="text" name="digits1" id="digits1"  />
-          <input type="submit" value="submit" />
-        </form>
+      <form enctype="multipart/form-data" method="post"
+        action="https://us-central1-al1x-cat-development-20023.cloudfunctions.net/code_wars_cipher_1">
+        <input type="text" value="" id="data" name="data">
+        <input type="submit" value="Submit">
+      </form>
 
         </div>  
     </Card>
@@ -130,22 +131,3 @@ Cipher Challenge instructions
 
 </head>
 
-<!-- <body style="background-color: #b8c0c2"> -->
-<script>
-  
-  function validate() {
-	var digits = document.frm.digits1.value;
-	if(digits == 'CLOUD ENTERPRISE SOLUTIONS')
-	{
-		location.href = 'https://andresmontemayorsalinas.github.io/CodeWarsAugust/Challenges/Cipher2.html';
-		
-	}
-	else
-	{
-		alert('The flag is incorrect');
-	}
-	
-	return false;
-	
-}
-</script>
