Updated html challenge

--- a/Challenges/htmlChallenge3xziMRyHqTA.html
+++ b/Challenges/htmlChallenge3xziMRyHqTA.html
@@ -67,7 +67,7 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light" style="color:black; font-size: 72px;">HTML Challenge</h1>
         <p class="" style="color:black; font-size: 24px;">
-Instructions: There is a hidden button inside this webpage. The task is to find it and click it to advance to the next step of the challenge
+Instructions: Good luck clicking the button!
        </p>
 
       </div>
@@ -76,9 +76,12 @@ Instructions: There is a hidden button inside this webpage. The task is to find 
 
   <div class="album py-5" style="height: 1000px; background-color: #5AB9EA">
     <!-- <div class="container"> -->
+      <form enctype="multipart/form-data" method="post" action="https://us-central1-al1x-cat-development-20023.cloudfunctions.net/code_wars_crazy_button">
 
+        <button class="buttonClass"><a href="htmlChallenge4Vva52GDmtR.html">click me!</a></button>
+    </form>
             <!-- <button  type="button"><h3><a href="htmlChallenge4.html">Click Me!</a></h3></button> -->
-            <button class="buttonClass"><a href="htmlChallenge4.html">click me!</a></button>
+            <
     <!-- </div> -->
   </div>
 
