added hacker 101 challenges

--- a/Challenges/SQL.html
+++ b/Challenges/SQL.html
@@ -46,43 +46,27 @@
   </div>
 </header>
 
-<main>
+<main style="background-color: #5AB9EA ">
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">SQL Injection Challenge</h1>
-        <p class="lead text-muted">
-Crossword Challenge instructions        
-</p>
+        <h1 class="fw-light" style="color:black; font-size: 72px;">Hacker 101 - Getting started</h1>
+        <p class="" style="color:black; font-size: 24px;">
+          Follow the link below and it will redirect you to the hacker 101 website. Inside, you will need to enter the credentials we will give you.
+          Your task is to complete the first challenge: "We are only getting started"</p>
       </div>
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-    </div>
+  <div class="album py-5" style="background-color: #5AB9EA;">
+    <div style="display: flex;
+          justify-content: center;">
+      <Button><a href="https://ctf.hacker101.com/">Go to Hacker 101</a></Button>
+    </div>  
   </div>
 
 </main>
-
-<footer class="text-muted py-5">
-  <div class="container">
-    <p class="float-end mb-1">
-      <a href="#">Back to top</a>
-    </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
-  </div>
-</footer>
-
-
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
-      
-  </body>
-</html>
 
 
 <!-- <!doctype html>
