--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@ Each challenge is worth 10 pts and you can earn 5 bonus points if your team is t
         <div class="col">
             <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/SQL.html">
                 <img src="./Pictures/metadata.png" style="width:75px; height:75px;">
-                <h3>SQL Injection</h3></a>
+                <h3>Hacker 101 CTF - Getting started</h3></a>
             </button>
         </div>
         <div class="col">
             <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Asterisk.html">
                 <img src="./Pictures/metadata.png" style="width:75px; height:75px;">
-                <h3>Print Asterisk Challenge</h3></a>
+                <h3>Hacker 101 CTF - Postbook</h3></a>
             </button>
         </div>
 
