--- a/Challenges/Asterisk.html
+++ b/Challenges/Asterisk.html
@@ -60,10 +60,10 @@ Your task is to complete the first challenge: "Postbook"
     </div>
   </section>
 
-  <div class="album py-5" style="background-color: #5AB9EA;">
+  <div class="album py-5" style="background-color: #5AB9EA; height:300px">
     <div style="display: flex;
           justify-content: center;">
-      <Button><a href="https://ctf.hacker101.com/">Go to Hacker 101</a></Button>
+      <Button style="width: 300px; height:50px; font-size: 24px;"><a href="https://ctf.hacker101.com/">Go to Hacker 101</a></Button>
     </div>  
   </div>
 
