--- a/Challenges/Cipher2BaN9qbtd3h.html
+++ b/Challenges/Cipher2BaN9qbtd3h.html
@@ -59,8 +59,10 @@
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1 class="fw-light" style="color:black; font-size: 72px;">Fallen Phrase Challenge</h1>
           <p class="" style="color:black; font-size: 24px;">
-            Cipher Challenge instructions
+Instructions: In this challenge you will need to complete the phrase on the board. The letters of the phrase on the board felt on the ground. You have to put the letters back on the board in the correct order. Luckily the letters felt directly under the column as they were on the board.
+You will need to complete the phrase and grab the word that is highlighted in the red box. Once you figure out the word, type it in the input below. If the word is correct, you will redirected to the next puzzle. If it's incorrect, it will let you know and you will have to try again.
           </p>
+
         </div>
       </div>
     </section>
@@ -78,7 +80,7 @@
 
           <form enctype="multipart/form-data" method="post"
             action="https://us-central1-al1x-cat-development-20023.cloudfunctions.net/code_wars_cipher_2">
-            <input type="text" value="" id="data" name="data">
+            <input style="width: 500px;" type="text" value="" id="data" name="data">
             <input type="submit" value="Submit">
           </form>
 
