--- a/Challenges/Cipher4RWKEhECMTs.html
+++ b/Challenges/Cipher4RWKEhECMTs.html
@@ -59,10 +59,10 @@ Cipher Challenge instructions
     </div>
   </section>
 
-  <div class="album py-5 bg-light">
+  <div class="album py-5 " style="background-color: #5AB9EA; height:500px">
     <div class="container">
         
-        <h1>The hidden phrase is: aaaaaaaaaaaa</h1>
+        <h1>The hidden phrase is: Michael Phelps leads all Olympians with 28 medals—23 gold, three silver and two bronze</h1>
 
     </div>
   </div>
