--- a/Challenges/LeetCode.html
+++ b/Challenges/LeetCode.html
@@ -46,23 +46,23 @@
   </div>
 </header>
 
-<main>
+<main style="background-color: #5AB9EA "> 
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Leet Code Challenge</h1>
-        <p class="lead text-muted">
-Crossword Challenge instructions        
+        <h1 class="fw-light" style="color:black; font-size: 72px;">Leet Code Challenge</h1>
+        <p class="" style="color:black; font-size: 24px;">
+          Follow the link below and it will redirect you to the LeetCode website. Inside, you will need to complete the challenge. Once you are done, please take a screenshot and upload it to the team's breakout chat
 </p>
       </div>
     </div>
   </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-      <h1>https://leetcode.com/problems/rotate-image/</h1>
-    </div>
+  <div class="album py-5" style="background-color: #5AB9EA; height:500px">
+    <div style="display: flex;
+          justify-content: center;">
+      <Button style="width: 300px; height:50px; font-size: 24px;"><a href="https://leetcode.com/problems/rotate-image/">Go to LeetCode Challenge</a></Button>
+    </div>  
   </div>
 
 </main>
