--- a/Challenges/Metadata.html
+++ b/Challenges/Metadata.html
@@ -73,7 +73,7 @@ Instructions: This photo has a hidden message inside it. Find it and it will giv
 
 </main>
 
-<footer class="text-muted py-5" style="background-color: #C1C8E4;">
+<footer class="text-muted py-5" style="background-color: white;">
   <div class="container">
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
