--- a/Challenges/Metadata2.html
+++ b/Challenges/Metadata2.html
@@ -53,10 +53,12 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light" style="color:black; font-size: 72px;">Metadata Challenge</h1>
         <p class="" style="color:black; font-size: 24px;">
-            For the next step of this challenge, there is hidden message inside the photo. You will need to dowload the photo and inspect it to find the hidden message.       </p>
+            Congratulations! you solved the first step of the metadata challenge!       </p>
         </p>
         <p class="" style="color:black; font-size: 24px;">
-            Hint: play with the colors of the picture to find the message        </p>
+            For the next step of this challenge, there is hidden message inside the photo. You will need to dowload the photo and inspect it to find the hidden message. Hint: play with the colors of the picture to find the message.
+          Once you found the hidden message, type it in your breakout's chat.       </p>
+        </p>
       </div>
     </div>
   </section>
