--- a/Challenges/Crossword.html
+++ b/Challenges/Crossword.html
@@ -69,16 +69,16 @@ Follow the link below and it will redirect you to a crossword challenge. You wil
     </div>
   </section>
 
-  <div class="album py-5" style="background-color: #5AB9EA;">
+  <div class="album py-5" style="background-color: #5AB9EA;  height:300px">
     <div style="display: flex;
           justify-content: center;">
-      <Button><a href="https://share.eclipsecrossword.com/play/713c68d3/it-team-roles">Go to Crossword page</a></Button>
+      <Button style="width: 300px; height:50px; font-size: 24px;"><a href="https://share.eclipsecrossword.com/play/713c68d3/it-team-roles">Go to Crossword page</a></Button>
     </div>  
   </div>
 
 </main>
 
-<!-- <footer class="text-muted py-5">
+<footer class="text-muted py-5">
   <div class="container">
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
@@ -86,7 +86,7 @@ Follow the link below and it will redirect you to a crossword challenge. You wil
     <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
     <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
   </div>
-</footer> -->
+</footer>
 
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
