--- a/Challenges/SQL.html
+++ b/Challenges/SQL.html
@@ -59,10 +59,10 @@
     </div>
   </section>
 
-  <div class="album py-5" style="background-color: #5AB9EA;">
+  <div class="album py-5" style="background-color: #5AB9EA; height:300px">
     <div style="display: flex;
           justify-content: center;">
-      <Button><a href="https://ctf.hacker101.com/">Go to Hacker 101</a></Button>
+      <Button style="width: 300px; height:50px; font-size: 24px;"><a href="https://ctf.hacker101.com/">Go to Hacker 101</a></Button>
     </div>  
   </div>
 
