--- a/Challenges/htmlChallenge4Vva52GDmtR.html
+++ b/Challenges/htmlChallenge4Vva52GDmtR.html
@@ -46,7 +46,7 @@
   </div>
 </header>
 
-<main style="background-color: #5AB9EA ">
+<main style="background-color: #5AB9EA; height:800px ">
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
@@ -62,7 +62,7 @@ Cipher Challenge instructions
   <div class="album py-5" style="background-color: #5AB9EA ">
     <div class="container">
         
-        <h1>The hidden phrase is: aaaaaaaaaaaa</h1>
+        <h1>The hidden phrase is: The Paris 2024 Olympic and Paralympic Games will be the biggest event ever organised in France. </h1>
 
     </div>
   </div>
