--- a/Challenges/Encryption.html
+++ b/Challenges/Encryption.html
@@ -53,6 +53,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light" style="color:black; font-size: 72px;" >Encryption Challenge</h1>
+        <br>
         <p style="color:black; font-size: 24px;">
 Instructions: There is a hidden message inside the encrypted text. Your task is to decrypt the message and find the hidden flag. Once you find the flag, please type it in your breakout's room chat. 
        </p>
@@ -61,7 +62,7 @@ Instructions: There is a hidden message inside the encrypted text. Your task is 
     </div>
   </section>
 
-  <div class="album py-5 " style="background-color: #5AB9EA;"  >
+  <div class="album py-5  " style="background-color: #5AB9EA;; padding-left: 2%"  >
     <div class="container" >
 
     <p1 style="color:black; font-size: 18px;">
@@ -142,8 +143,8 @@ Instructions: There is a hidden message inside the encrypted text. Your task is 
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+    <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
   </div>
 </footer>
 
