--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
 
   <section class="py-5 text-center container">
     <div class="row py-lg-6" >
-      <div class="col-lg-6 col-md-8 mx-auto">
+      <div class="col-lg-8 col-md-8 mx-auto">
         <h1 class="fw-light" style="color:black; font-size: 72px;">Code Wars August</h1>
         <p class="" style="color:black; font-size: 24px;">
-Welcome to Code Wars! In this website you will find the 8 challenges to complete. To view each challenge you must click on the card of the challenge and you will be redirected to the challenge page. The instruction of each page can be found inside the challenge page.
+          <br>
+Welcome to Code Wars! In this website you will find the 8 challenges to complete. To view each challenge you must click on the card of the challenge and you will be redirected to the challenge page. The instruction of each challenge can be found inside the challenge's page.
        </p>
         <p class="" style="color:black; font-size: 24px;">
-Each challenge is worth 10 pts and you can earn 5 bonus points if your team is the first to solve a challenge
+Each challenge is worth 10 pts and you can earn 5 bonus points if your team is the first to solve a challenge!
        </p>
 
       </div>
@@ -68,7 +69,7 @@ Each challenge is worth 10 pts and you can earn 5 bonus points if your team is t
   <div class="album py-5 t " >
     <div class="container">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" style="padding-left:6%;">
         <div class="col">
             <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Encryption.html">
                 <img src="./Pictures/encryption.png" style="width:75px; height:75px;">
@@ -128,13 +129,13 @@ Each challenge is worth 10 pts and you can earn 5 bonus points if your team is t
 
 </main>
 
-<footer class="text-muted py-5" >
+<footer class="text-muted py-5" style="background-color: #FFFFFF;">
   <div class="container">
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+    <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
   </div>
 </footer>
 
