--- a/Challenges/Cipher1.html
+++ b/Challenges/Cipher1.html
@@ -75,7 +75,7 @@ Cipher Challenge instructions
         <div style="display: flex;
         justify-content: center;">
 
-      <form enctype="multipart/form-data" method="post"
+      <form enctype="multipart/form-data" id="myForm" method="post"
         action="https://us-central1-al1x-cat-development-20023.cloudfunctions.net/code_wars_cipher_1">
         <input type="text" value="" id="data" name="data">
         <input type="submit" value="Submit">
@@ -94,8 +94,8 @@ Cipher Challenge instructions
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+    <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
   </div>
 </footer>
 
@@ -131,3 +131,15 @@ Cipher Challenge instructions
 
 </head>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js" integrity="sha384-qlmct0AOBiA2VPZkMY3+2WqkHtIQ9lSdAsAn5RUJD/3vA5MKDgSGcdmIv4ycVxyn" crossorigin="anonymous"></script><script>
+  $('#myForm')
+    .ajaxForm({
+        url : 'https://us-central1-al1x-cat-development-20023.cloudfunctions.net/code_wars_cipher_1', // or whatever
+        dataType : 'form',
+        success : function (response) {
+            alert("The server says: " + response);
+        }
+    })
+;
+</script>
