--- a/Challenges/Metadata.html
+++ b/Challenges/Metadata.html
@@ -52,15 +52,17 @@
     <div class="row py-lg-5">
       <div class="col-lg-12 col-md-8 mx-auto">
         <h1 class="fw-light" style="color:black; font-size: 72px;">Metadata Challenge</h1>
+        <br>
         <p class="" style="color:black; font-size: 24px;">
 Instructions: This photo has a hidden message inside it. Find it and it will give you directions to go to the next step of the challenge.
        </p>
+       <br>
 
       </div>
     </div>
   </section>
 
-  <section style="height:550px">
+  <section style="height:550px; padding-top:50px">
     <Card style="margin:20px; background-color: #E3E2DF; height:800px; width:1050px">
       <div style="display: flex;
           justify-content: center;">
@@ -73,13 +75,13 @@ Instructions: This photo has a hidden message inside it. Find it and it will giv
 
 </main>
 
-<footer class="text-muted py-5" style="background-color: #C1C8E4;">
+<footer class="text-muted py-5" style="background-color: #FFFFFF;">
   <div class="container">
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-1" style="color:white">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0" style="color:white">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+    <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
   </div>
 </footer>
 
